include_directories(
    ${PROJECT_SOURCE_DIR}/externals/easyloggingpp
    ${PROJECT_SOURCE_DIR}/externals/udplibrary
    ${Boost_INCLUDE_DIRS}
    ${SQLite3_INCLUDE_DIR})

add_executable(swgchat
    BinaryStream.hpp
    ChatAvatar.hpp
    ChatAvatarService.cpp
    ChatAvatarService.hpp
    ChatEnums.hpp
    ChatRoom.cpp
    ChatRoom.hpp
    ChatRoomService.cpp
    ChatRoomService.hpp
    GatewayClient.cpp
    GatewayClient.hpp
    GatewayNode.cpp
    GatewayNode.hpp
    main.cpp
    Node.hpp
    NodeClient.hpp
    PersistentMessage.hpp
    PersistentMessageService.cpp
    PersistentMessageService.hpp
    RegistrarClient.cpp
    RegistrarClient.hpp
    RegistrarNode.cpp
    RegistrarNode.hpp
    Request.hpp
    Response.hpp
    Serialization.hpp
    StreamUtils.cpp
    StreamUtils.hpp
    StringUtils.cpp
    StringUtils.hpp
    SwgChatApp.cpp
    SwgChatApp.hpp
    SwgChatConfig.hpp)

target_link_libraries(swgchat
    udplibrary
    ${Boost_LIBRARIES}
    ${SQLite3_LIBRARY})

if(WIN32)
    target_link_libraries(swgchat ws2_32)
endif()
